extends Control

@export var questions = [
	{
		"question": "‡πÄ‡∏î‡∏•‡∏™‡∏π‡∏á‡πÄ‡∏ó‡πà‡∏≤‡πÑ‡∏´‡∏£‡πà?",
		"options": {"A": "142 ‡∏ã‡∏°", "B": "142 ‡∏ä‡∏°.", "C": "142 ‡∏°.", "D": "142 ‡∏°‡∏°."},
		"answer": "A",
		"points": 142
	},
	{
		"question": "1 + 1 ‡πÄ‡∏ó‡πà‡∏≤‡∏Å‡∏±‡∏ö‡πÄ‡∏ó‡πà‡∏≤‡πÑ‡∏£?",
		"options": {"A": "1", "B": "2", "C": "3", "D": "4"},
		"answer": "B",
		"points": 10
	},
	{
		"question": "‡πÄ‡∏•‡∏Ç‡πÉ‡∏î‡∏°‡∏≤‡∏Å‡∏ó‡∏µ‡πà‡∏™‡∏∏‡∏î?",
		"options": {"A": "5", "B": "10", "C": "8", "D": "7"},
		"answer": "B",
		"points": 10
	},
	{
		"question": "‡∏õ‡∏£‡∏∞‡πÄ‡∏ó‡∏®‡πÑ‡∏ó‡∏¢‡∏°‡∏µ‡∏§‡∏î‡∏π‡∏Å‡∏µ‡πà‡∏§‡∏î‡∏π?",
		"options": {"A": "2", "B": "3", "C": "4", "D": "5"},
		"answer": "B",
		"points": 10
	},
	{
		"question": "‡∏ß‡∏±‡∏ô‡πÉ‡∏ô‡∏´‡∏ô‡∏∂‡πà‡∏á‡∏™‡∏±‡∏õ‡∏î‡∏≤‡∏´‡πå‡∏°‡∏µ‡∏Å‡∏µ‡πà‡∏ß‡∏±‡∏ô?",
		"options": {"A": "5", "B": "6", "C": "7", "D": "8"},
		"answer": "C",
		"points": 10
	},
	{
		"question": "2 √ó 5 ‡πÄ‡∏ó‡πà‡∏≤‡∏Å‡∏±‡∏ö‡πÄ‡∏ó‡πà‡∏≤‡πÑ‡∏£?",
		"options": {"A": "10", "B": "12", "C": "8", "D": "15"},
		"answer": "A",
		"points": 10
	},
	{
		"question": "‡∏´‡∏≤‡∏Å‡∏°‡∏µ‡πÅ‡∏≠‡∏õ‡πÄ‡∏õ‡∏¥‡πâ‡∏• 4 ‡∏•‡∏π‡∏Å ‡∏Å‡∏¥‡∏ô‡πÑ‡∏õ 1 ‡∏•‡∏π‡∏Å ‡πÄ‡∏´‡∏•‡∏∑‡∏≠‡∏Å‡∏µ‡πà‡∏•‡∏π‡∏Å?",
		"options": {"A": "2", "B": "3", "C": "4", "D": "1"},
		"answer": "B",
		"points": 10
	},
	{
		"question": "‡πÄ‡∏•‡∏Ç‡πÉ‡∏î‡∏Ñ‡∏∑‡∏≠‡πÄ‡∏•‡∏Ç‡∏Ñ‡∏π‡πà?",
		"options": {"A": "3", "B": "7", "C": "4", "D": "9"},
		"answer": "C",
		"points": 10
	},
	{
		"question": "5 + 0 ‡πÄ‡∏ó‡πà‡∏≤‡∏Å‡∏±‡∏ö‡πÄ‡∏ó‡πà‡∏≤‡πÑ‡∏£?",
		"options": {"A": "0", "B": "10", "C": "5", "D": "1"},
		"answer": "C",
		"points": 10
	},
	{
		"question": "‡πÉ‡∏ô‡∏´‡∏ô‡∏∂‡πà‡∏á‡∏ß‡∏±‡∏ô‡∏°‡∏µ‡∏Å‡∏µ‡πà‡∏ä‡∏±‡πà‡∏ß‡πÇ‡∏°‡∏á?",
		"options": {"A": "24", "B": "12", "C": "60", "D": "30"},
		"answer": "A",
		"points": 10
	}
]

var shuffled_questions = []
var current_question_index = 0
var score = 0

@onready var labelQuestion = $Question
@onready var buttonChoices = [$ButtonA, $ButtonB, $ButtonC]
@onready var labelFeedback = $Feedback
@onready var scoreLable = $Score
@onready var restart_button = $RestartButton
@onready var back_button = $BackButton
@onready var image_rect = $TextureRect

func _ready():
	restart_button.pressed.connect(restart_game)
	back_button.pressed.connect(on_click_back)
	set_default_color_and_image()
	start_game()

func start_game():
	restart_button.visible = false
	shuffled_questions = questions.duplicate()
	shuffled_questions.shuffle()
	current_question_index = 0
	load_question()

func restart_game():
	score = 0
	start_game()

func load_question():
	set_default_color_and_image()
	
	scoreLable.text = "Score: %d" % score
	if current_question_index >= shuffled_questions.size():
		labelQuestion.text = "üéâ ‡∏Ñ‡∏∏‡∏ì‡∏ï‡∏≠‡∏ö‡∏Ñ‡∏≥‡∏ñ‡∏≤‡∏°‡∏Ñ‡∏£‡∏ö‡πÅ‡∏•‡πâ‡∏ß! ‡∏Ñ‡∏∞‡πÅ‡∏ô‡∏ô‡∏Ç‡∏≠‡∏á‡∏Ñ‡∏∏‡∏ì: %d" % score
		labelFeedback.text = ""
		for button in buttonChoices:
			button.visible = false
		restart_button.visible = true
		return

	var question_data = shuffled_questions[current_question_index]
	labelQuestion.text = "‡∏Ç‡πâ‡∏≠‡∏ó‡∏µ‡πà %d: %s" % [min(current_question_index + 1, shuffled_questions.size()), question_data["question"]]

	var keys = ["A", "B", "C"]
	for i in keys.size():
		var key = keys[i]
		var btn = buttonChoices[i]
		btn.visible = false
		btn.text = "%s" % question_data["options"][key]
		if btn.pressed.is_connected(handle_answer_wrapper):
			btn.pressed.disconnect(handle_answer_wrapper)
		btn.pressed.connect(handle_answer_wrapper.bind(key))
		btn.visible = true

	labelFeedback.text = ""

func handle_answer_wrapper(selected_key: String):
	handle_answer(selected_key)

func handle_answer(selected_key: String):
	var question_data = shuffled_questions[current_question_index]
	var answer_key = question_data["answer"]
	if selected_key == answer_key:
		labelFeedback.text = "‚úÖ ‡∏ñ‡∏π‡∏Å‡∏ï‡πâ‡∏≠‡∏á!!"
		score += question_data["points"]
		scoreLable.text = "Score: %d" % score
	else:
		labelFeedback.text = "‚ùå ‡∏ú‡∏¥‡∏î‡∏ô‡∏∞ ‡∏Ñ‡∏≥‡∏ï‡∏≠‡∏ö‡∏ó‡∏µ‡πà‡∏ñ‡∏π‡∏Å‡∏Ñ‡∏∑‡∏≠: %s" % question_data["options"][answer_key]

	set_background_image(selected_key, selected_key == answer_key)

	current_question_index += 1
	await get_tree().create_timer(2.0).timeout
	load_question()

func set_button_color(name_str: String, color_code: String):
	var color = Color(color_code)
	for btn in buttonChoices:
		btn.add_theme_color_override(name_str, color)

func set_all_labels_color(name_str: String, color_code: String):
	var color = Color(color_code)
	labelQuestion.add_theme_color_override(name_str, color)
	labelFeedback.add_theme_color_override(name_str, color)
	scoreLable.add_theme_color_override(name_str, color)



func set_background_image(choice: String, is_correct: bool):
	var disabled_color = Color("#1234FF")
	var choiced_color = Color("#1234FF") # black green
	var btn_index = 0
	if is_correct:
		if choice == "A":
			image_rect.texture = load("res://assets/quiz_game/‡∏ï‡∏≠‡∏ö‡∏ñ‡∏π‡∏Å‡∏ã‡πâ‡∏≤‡∏¢.png")
			btn_index = 0
		elif choice == "B":
			image_rect.texture = load("res://assets/quiz_game/‡∏ï‡∏≠‡∏ö‡∏ñ‡∏π‡∏Å‡∏Å‡∏•‡∏≤‡∏á.png")
			btn_index = 1
		elif choice == "C":
			image_rect.texture = load("res://assets/quiz_game/‡∏ï‡∏≠‡∏ö‡∏ñ‡∏π‡∏Å‡∏Ç‡∏ß‡∏≤.png")
			btn_index = 2
		disabled_color =  Color("#000000")	
		choiced_color = Color("#00FF00")
	else:
		if choice == "A":
			image_rect.texture = load("res://assets/quiz_game/‡∏ï‡∏≠‡∏ö‡∏ú‡∏¥‡∏î‡∏ã‡πâ‡∏≤‡∏¢.png")
			btn_index = 0
		elif choice == "B":
			image_rect.texture = load("res://assets/quiz_game/‡∏ï‡∏≠‡∏ö‡∏ú‡∏¥‡∏î‡∏Å‡∏•‡∏≤‡∏á.png")
			btn_index = 1
		elif choice == "C":
			image_rect.texture = load("res://assets/quiz_game/‡∏ï‡∏≠‡∏ö‡∏ú‡∏¥‡∏î‡∏Ç‡∏ß‡∏≤.png")
			btn_index = 2
		set_all_labels_color("font_color", "#FFFFFF")
		set_button_color("font_color", "#FFFFFF")
		set_button_color("font_focus_color", "#FFFFFF")
		disabled_color = Color("#FF0000")
		choiced_color = Color("#FFFFFF")

	for btn in buttonChoices:
		btn.add_theme_color_override("font_disabled_color", disabled_color)
		btn.disabled = true

	buttonChoices[btn_index].add_theme_color_override("font_disabled_color", choiced_color)

func set_default_color_and_image():
	image_rect.texture = load("res://assets/quiz_game/question_screen.png")
	set_all_labels_color("font_color", "#000000")
	set_button_color("font_color", "#000000")
	set_button_color("font_disabled_color", "#1234FF")

	# func set_button_hover_font_color():
	var hover_color = Color("#a3a3a3")
	for btn in buttonChoices:
		btn.add_theme_color_override("font_color_hover", hover_color)
		btn.disabled = false

func on_click_back():
	# get_tree().change_scene_to_file("res://scenes/main_menu.tscn")
	score = 0
	start_game()
